add result page

--- a/sispak/jsconfig.json
+++ b/sispak/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/data/*": ["data/*"],
+      "@/context/*": ["context/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "data/data.jsx"],
