--- a/sispak/package.json
+++ b/sispak/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.0",
+    "@prisma/client": "^5.15.0",
     "framer-motion": "^11.2.6",
     "jotai": "^2.8.2",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "20.14.2",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1"
   }
 }
