--- a/sispak/jsconfig.json
+++ b/sispak/jsconfig.json
@@ -7,5 +7,5 @@
       "@/context/*": ["context/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "data/data.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", ".next/types/**/*.ts", "data/data.jsx"],
 }
