--- a/sispak/package.json
+++ b/sispak/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
