--- a/sispak/tsconfig.json
+++ b/sispak/tsconfig.json
@@ -27,7 +27,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/providers.jsx", "app/layout.jsx"  ],
   "exclude": [
     "node_modules"
   ]
